--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/riivanov/armageddon/issues"
   },
-  "homepage": "https://github.com/riivanov/armageddon#readme"
+  "homepage": "https://github.com/riivanov/armageddon#readme",
+  "devDependencies": {
+    "ts-node": "^10.9.2"
+  }
 }
