--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   },
   "homepage": "https://github.com/riivanov/armageddon#readme",
   "devDependencies": {
-    "ts-node": "^10.9.2"
+    "@types/node": "^20.11.0",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
   }
 }
