--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "NASA API integration to detect near earth asteroids",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
