--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   },
   "homepage": "https://github.com/riivanov/armageddon#readme",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
