--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=7891
+# this would not normally be in version control; due to time constraints
+NASA_API_KEY=WFJGKdRg3TFvzzjilXeSB9HiEf6bC4uaZ3Ia23RB
