--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "homepage": "https://github.com/riivanov/armageddon#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
+    "axios": "^1.6.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ts-node": "^10.9.2",
