--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts"
+    "start": "ts-node index.ts",
+    "dev:debug": "ts-node-dev --transpile-only --respawn --inspect=4321 --project tsconfig.json index.ts",
+    "dev": "ts-node-dev --transpile-only --respawn --project tsconfig.json index.ts"
   },
   "repository": {
     "type": "git",
@@ -35,6 +37,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
   }
