--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
     "ts-node-dev": "^2.0.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/luxon": "^3.4.1",
+    "luxon": "^3.4.4"
   }
 }
