--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index.ts",
-    "dev:debug": "ts-node-dev --transpile-only --respawn --inspect=4321 --project tsconfig.json index.ts",
-    "dev": "ts-node-dev --transpile-only --respawn --project tsconfig.json index.ts"
+    "start": "ts-node src/index.ts",
+    "dev:debug": "ts-node-dev --transpile-only --respawn --inspect=4321 --project tsconfig.json src/index.ts",
+    "dev": "ts-node-dev --transpile-only --respawn --project tsconfig.json src/index.ts"
   },
   "repository": {
     "type": "git",
